# MedevProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  Medev BShip.smproj  README.md
MedevProject/: CMakeLists.txt  Cell.h  Grid.cpp  MedevProject.cpp  MedevProject.h
MedevProject/ship/: ship.h
doc/: Doxyfile
doc/html/: _cell_8cpp.html  _cell_8cpp_8obj_8d.html  _cell_8cpp_source.html  _cell_8h.html  _grid_8cpp.html  _grid_8cpp_8obj_8d.html  _grid_8cpp_source.html  _grid_8h.html  _medev_project_8cpp.html  _medev_project_8cpp_source.html  _player_8cpp.html  _player_8cpp_source.html  _player_8h.html  _r_e_a_d_m_e_8md.html  _ship_8cpp.html  _ship_8cpp_8obj_8d.html  _ship_8cpp_source.html  _ship_8h.html  annotated.html  class_cell-members.html  class_cell.html  class_grid-members.html  class_grid.html  class_player-members.html  class_player.html  class_ship-members.html  class_ship.html  classes.html  default-martin_2_c_make_files_23_831_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  default-martin_2_c_make_files_23_831_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  default-martin_2_c_make_files_2_medev_project_8dir_2src_2_medev_project_8cpp_8obj_8d.html  default-martin_2_medev_project_2_c_make_files_2_medev_project_8dir_2_medev_project_8cpp_8obj_8d.html  dir_03649e0d979ebedba38f0bf933a95f5b.html  dir_087548274d7c79bc6703ed9a23171a34.html  dir_1e076a361c1f7fd6585f9a2db8c9be61.html  dir_25e77f3741be43fbe1879c41dbb5cd8e.html  (+39 more)
include/: Cell.h  Grid.h  Player.h  Ship.h
src/: CMakeLists.txt  Cell.cpp  Grid.cpp  MedevProject.cpp  Player.cpp  Ship.cpp
(+95 files in other folders)
